<resources>
    <string name="app_name">My Hananeel Cinta</string>
    <string name="app_initial">JKI HanCin</string>
    <string name="app_version">V 1.0.0</string>
    <string name="login">Masuk</string>
    <string name="welcome">Selamat datang di JKI Hananeel Cinta</string>
    <string name="sign_up_desc">Belum punya akun? </string>
    <string name="sign_up">Daftar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="next">Lanjut</string>
    <string name="submit">Submit</string>
    <string name="register">Daftar</string>
    <string name="text_pleaseWait">Harap Bersabar, Aktifitas sedang diproses</string>
    <string name="stepper_format_txt">%1$d dari %2$d</string>
    <string name="email">Email</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="name">Nama Lengkap</string>
    <string name="id_number">Nomor KTP</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male">Laki - laki</string>
    <string name="female">Perempuan</string>
    <string name="place_of_birth">Tempat Lahir</string>
    <string name="date_of_birth">Tanggal Lahir</string>
    <string name="phone_number">Nomor Handphone</string>
    <string name="address">Alamat</string>
    <string name="blood_type">Golongan Darah</string>
    <string name="education">Pendidikan Terakhir</string>
    <string name="work">Pekerjaan</string>
    <string name="baptis">Sudah Baptis Air?</string>
    <string name="baptis_time">Kapan Babtis Air?</string>
    <string name="baptism_time_hint">Tanggal Baptis Air</string>
    <string name="baptis_place">Gereja Tempat Baptis Air</string>
    <string name="church_origin">Asal Gereja (bila pindah gereja)</string>
    <string name="church_origin_hint">Asal Gereja</string>
    <string name="baptis_holy_spirit">Sudah Baptis Roh Kudus?</string>
    <string name="reason_moving_church">Alasan Pindah Gereja</string>
    <string name="marital_status">Status Pernikahan</string>
    <string name="father_name">Nama Lengkap Ayah</string>
    <string name="father_name_hint">Nama Lengkap Ayah</string>
    <string name="mother_name">Nama Lengkap Ibu</string>
    <string name="mother_name_hint">Nama Lengkap Ibu</string>
    <string name="status_in_family">Status Dalam Keluarga</string>
    <string name="selfie">Foto Diri</string>
    <string name="nij">Nomor Induk Jemaat</string>
    <string name="head_of_family_name">Nama Kepala Keluarga</string>
    <string name="siblings_name">Nama Saudara Kandung</string>
    <string name="siblings_name_hint">Nama Lengkap Saudara Kandung</string>
    <string name="wife_name">Nama Istri</string>
    <string name="wife_name_hint">Nama Lengkap Istri</string>
    <string name="husband_name">Nama Suami</string>
    <string name="husband_name_hint">Nama Lengkap Suami</string>
    <string name="children_name">Nama Anak-anak</string>
    <string name="child_name">Nama Lengkap Anak</string>
    <string name="email_error_message">Email tidak boleh kosong</string>
    <string name="username_error_message">Username tidak boleh kosong</string>
    <string name="password_error_message">Password tidak boleh kosong</string>
    <string name="password_confirmation_error_message">Konfirmasi password tidak boleh kosong</string>
    <string name="password_confirmation_not_match">Password harus sama dengan yang diatas</string>
    <string name="name_error_message">Nama tidak boleh kosong</string>
    <string name="id_number_error_message">Nomor KTP tidak boleh kosong</string>
    <string name="place_of_birth_error_message">Tempat lahir tidak boleh kosong</string>
    <string name="date_of_birth_error_message">Tanggal lahir tidak boleh kosong</string>
    <string name="phone_number_error_message">Nomor handphone tidak boleh kosong</string>
    <string name="address_error_message">Alamat tidak boleh kosong</string>
    <string name="selfie_error_message">Foto diri tidak boleh kosong</string>
    <string name="mother_name_error_message">Nama Ibu tidak boleh kosong</string>
    <string name="father_name_error_message">Nama Ayah tidak boleh kosong</string>
    <string name="church_origin_error_message">Asal gereja tidak boleh kosong</string>
    <string name="reason_moving_church_error_message">Alasan pindah gereja tidak boleh kosong</string>
    <string name="user_registration">Pendaftaran Jemaat Baru</string>
    <string name="success_user_registration_title">Yeay! Data kamu berhasil disimpan</string>
    <string name="success_user_registration_desc">Selamat datang di JKI Hananeel Cinta</string>
    <string name="OK">OK!</string>
    <string name="dialog_general_cancel">Apakah Anda yakin ingin keluar?</string>
    <string name="text_confirmation_no">Tidak</string>
    <string name="text_confirmation_yes_">Ya</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="verse_of_the_day_sample">Therefore, there is now no condemnation for those who are in Christ Jesus, because through Christ Jesus the law of the Spirit of life set me free from the law of sin and death.</string>
    <string name="verse_sample">Romans 8:1-2</string>
    <string name="menu">Menu</string>
    <string name="reflection">Renungan</string>
    <string name="help">Minta Bantuan</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="sign_out">Keluar</string>
    <string name="more">Baca Selengkapnya -></string>
    <string name="services">Ibadah</string>
    <string name="service_verse">Janganlah kita menjauhkan diri dari pertemuan-pertemuan ibadah kita, seperti dibiasakan oleh beberapa orang, tetapi marilah kita saling menasihati, dan semakin giat melakukannya menjelang hari Tuhan yang mendekat.</string>
    <string name="service_nats">Ibrani 10:25</string>
    <string name="ibadah_raya">Ibadah Raya</string>
    <string name="ibadah_raya_notes">Memuji, menyembah Tuhan secara korporat dan menerima santapan rohani yang baik untuk roh, jiwa dan tubuh kita</string>
    <string name="ibadah_pagi">Ibadah 1: 07.00 – 09.00 WIB</string>
    <string name="ibadah_siang">Ibadah 2: 10.00 – 12.00 WIB</string>
    <string name="holy_spirit_night">Holy Spirit Night</string>
    <string name="holy_spirit_night_notes">Memperdalam hubungan pribadi dengan Roh Kudus, sehingga setiap kita mampu berjalan hari demi hari bersama-Nya</string>
    <string name="hsn_malam">19.00 – 21.00 WIB</string>
    <string name="youth_malam">17.00 – 19.00 WIB</string>
    <string name="mezbah_keluarga">Mezbah Keluarga</string>
    <string name="mezbah_keluarga_notes">Memelihara dan memperkuat keluarga kita dalam iman dan pengajaran yang benar tentang Tuhan, lewat sharing dan kebersamaan</string>
    <string name="lihat_jadwal">Lihat Jadwal</string>
    <string name="sekolah_minggu">Sekolah Minggu</string>
    <string name="sekolah_minggu_notes">Mendidik anak-anak untuk mengenal dan mencintai Tuhan dengan benar dari masa kecilnya, sehinga mempunyai dasar yang kuat</string>
    <string name="youth">Youth</string>
    <string name="youth_notes">Membangkitkan generasi muda yang cinta dan takut akan Tuhan untuk membawa keluar jiwa-jiwa dari dalam kegelapan dan menjadi anak panah Tuhan di akhir jaman</string>
    <string name="mk_message">Shalom, Boleh saya mengetahui informasi lebih lanjut mengenai MK di rumah %1s ?</string>
    <string name="oops">Oops...</string>
    <string name="network_error">Ada yang gak beres, coba hubungi admin.</string>
    <string name="offering">Persembahan</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="create_pastor_messages">Buat Renungan</string>
    <string name="info">Pengumuman</string>
    <string name="title">Judul</string>
    <string name="writer_name">Nama Penulis</string>
    <string name="messages_hint">Apa yang ingin anda sampaikan?</string>
    <string name="success_create_pastor_messages">Renungan Berhasil Disimpan</string>
    <string name="success_create_pastor_message_desc">Jemaat Akan Senang Membaca Renungan Minggu Ini</string>
    <string name="green_room">Admin</string>
    <string name="list_pastor_message">Daftar Renungan</string>
    <string name="list_congregation">Daftar Jemaat</string>
    <string name="search_congregation_hint">Cari nama jemaat...</string>
    <string name="congregation_not_found_title">Nama Jemaat Tidak Ditemukan</string>
    <string name="congregation_not_found_sub_title">Mungkin jemaat yang kamu cari belum terdaftar.</string>
    <string name="announcement_list">Daftar Pengumuman</string>
    <string name="create_announcement">Buat Pengumuman</string>
    <string name="add_image_text">Ketuk untuk menambahkan gambar</string>
    <string name="announcement_title">Judul Pengumuman</string>
    <string name="announcement_value">Isi Pengumuman</string>
    <string name="announcement_url">Link (Optional)</string>
    <string name="link_example">E.g. https://www.youtube.com</string>
    <string name="announcement_title_error">Judul tidak boleh kosong.</string>
    <string name="announcement_value_error">Isi pengumuman tidak boleh kosong.</string>
    <string name="success_submit_announcement_title">Pengumuman Berhasil Dikirim</string>
    <string name="success_submit_announcement_sub_title">Jemaat Akan Segera Mendapatkan Pengumuman.</string>
    <string name="announcement_not_found_title">Pengumuman Tidak Ditemukan</string>
    <string name="announcement_not_found_info">Coba cari dengan kata kunci lain.</string>
    <string name="announcement_detail">Detail Pengumuman</string>
    <string name="contact_name">Contact Person (Optional)</string>
    <string name="contact_person_name_example">E.g. Angel, Maria</string>
    <string name="contact">Contact Number (Optional)</string>
    <string name="contact_person_example">E.g. +628 123 4567 890</string>
    <string name="announcement_message">Shalom, Boleh saya mengetahui informasi lebih lanjut mengenai pengumuman %1s ?</string>
    <string name="confirm_delete_announcement">Apakah anda yakin mau menghapus pengumuman ini?</string>
    <string name="confirm_delete_announcement_desc">Pengumuman yang telah dihapus tidak dapat dikembalikan lagi.</string>
    <string name="success_delete_announcement">Pengumuman berhasil dihapus.</string>
    <string name="prayer_request">Permintaan Doa</string>
    <string name="create_prayer_request">Buat Permintaan Doa</string>
    <string name="prayer_request_type">Jenis Permintaan Doa</string>
    <string name="visitation">Kunjungan</string>
    <string name="prayer_help">Bantuan Doa</string>
    <string name="counseling">Konseling</string>
    <string name="request_desc">Deskripsi Permintaan Doa</string>
    <string name="finish_pray_rrequest">Selesaikan Permintaan Doa</string>
    <string name="success_create_prayer_request">Permintaan Doa Berhasil Disimpan</string>
    <string name="success_create_prayer_request_desc">Permintaan doa anda akan segera ditangani oleh pendoa.</string>
    <string name="pray_request_list">Daftar Doa</string>
    <string name="pray_request_not_found_title">Permintaan Doa Tidak Ditemukan</string>
    <string name="pray_request_not_found_desc">Coba cari dengan kata kunci lain.</string>
    <string name="handle_pray_request">Tangani Permintaan Doa</string>
    <string name="success_handle_pray_request">Permintaan Doa Sekarang Ditangani Oleh Anda</string>
</resources>