<?xml version="1.0" encoding="utf-8"?>
 <layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_32sdp"
        tools:context=".login.LoginActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_login_title"
                style="@style/Manrope.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/red_9A031E"
                android:textSize="@dimen/_32ssp" />

            <TextView
                android:id="@+id/tv_login_desc"
                style="@style/Manrope.Reguler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/welcome"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/et_username"
                style="@style/Manrope.Reguler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_46sdp"
                android:background="@drawable/edittext_background_grey"
                android:hint="@string/username"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_11ssp" />

            <EditText
                android:id="@+id/et_password"
                style="@style/Manrope.Reguler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21sdp"
                android:background="@drawable/edittext_background_grey"
                android:hint="@string/password"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_11ssp" />

            <Button
                android:id="@+id/btn_login"
                style="@style/Manrope.SemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21sdp"
                android:backgroundTint="@color/red_9A031E"
                android:padding="@dimen/_12sdp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

            <LinearLayout
                android:id="@+id/ly_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_29sdp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/btn_login">

                <TextView
                    style="@style/Manrope.Reguler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_desc"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tv_register"
                    style="@style/Manrope.ExtraBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>