<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation"
            app:lottie_autoPlay="true"
            app:lottie_fileName="success.json"
            app:lottie_loop="true"
            android:layout_width="@dimen/_125sdp"
            android:layout_height="@dimen/_125sdp" />

        <TextView
            android:id="@+id/tv_dialog_main_text"
            style="@style/Sanfransisco.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/success_user_registration_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tv_dialog_secondary_text"
            style="@style/Sanfransisco.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/success_user_registration_desc"
            android:textAlignment="center"
            android:textColor="@color/greyAAAAAA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_positive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/HancinSubmitButton"
                android:text="@string/OK"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</layout>