<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <TextView
            android:id="@+id/tv_login_title"
            style="@style/Manrope.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/app_initial"
            android:textColor="@color/red_9A031E"
            android:textSize="@dimen/_32ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_desc"
            style="@style/Manrope.Reguler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/user_registration"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_desc">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Manrope.Reguler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/et_address"
                    style="@style/Manrope.Reguler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edittext_background_grey_border"
                    android:gravity="top|start"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="8"
                    android:minLines="5"
                    android:paddingLeft="@dimen/_16sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingRight="@dimen/_16sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:scrollbars="vertical" />

                <TextView
                    android:id="@+id/tv_address_error_message"
                    style="@style/Manrope.Reguler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/address_error_message"
                    android:textColor="@color/red_C2576A"
                    android:visibility="gone"/>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>