<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <TextView
            android:id="@+id/tv_login_title"
            style="@style/Sanfransisco.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/app_initial"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_32ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_desc"
            style="@style/Sanfransisco.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/user_registration"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_desc">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ly_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Sanfransisco.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        style="@style/Sanfransisco.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@drawable/edittext_background_grey_border"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/_16sdp"
                        android:paddingTop="@dimen/_12sdp"
                        android:paddingRight="@dimen/_16sdp"
                        android:paddingBottom="@dimen/_12sdp"
                        android:singleLine="true" />

                    <TextView
                        android:id="@+id/tv_email_error_message"
                        style="@style/Sanfransisco.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/email_error_message"
                        android:textColor="@color/red_C2576A"
                        android:visibility="gone" />

                    <View
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:background="@color/greyAAAAAA" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ly_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Sanfransisco.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_username"
                        style="@style/Sanfransisco.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@drawable/edittext_background_grey_border"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:paddingLeft="@dimen/_16sdp"
                        android:paddingTop="@dimen/_12sdp"
                        android:paddingRight="@dimen/_16sdp"
                        android:paddingBottom="@dimen/_12sdp"
                        android:singleLine="true" />

                    <TextView
                        android:id="@+id/tv_username_error_message"
                        style="@style/Sanfransisco.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/username_error_message"
                        android:textColor="@color/red_C2576A"
                        android:visibility="gone" />

                    <View
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:background="@color/greyAAAAAA" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ly_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Sanfransisco.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        style="@style/Sanfransisco.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@drawable/edittext_background_grey_border"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/_16sdp"
                        android:paddingTop="@dimen/_12sdp"
                        android:paddingRight="@dimen/_16sdp"
                        android:paddingBottom="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tv_password_error_message"
                        style="@style/Sanfransisco.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/password_error_message"
                        android:textColor="@color/red_C2576A"
                        android:visibility="gone" />

                    <View
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:background="@color/greyAAAAAA" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ly_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Sanfransisco.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password_confirmation" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password_confirmation"
                        style="@style/Sanfransisco.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@drawable/edittext_background_grey_border"
                        android:hint="@string/password_confirmation"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/_16sdp"
                        android:paddingTop="@dimen/_12sdp"
                        android:paddingRight="@dimen/_16sdp"
                        android:paddingBottom="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tv_password_confirmation_error_message"
                        style="@style/Sanfransisco.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/password_confirmation_not_match"
                        android:textColor="@color/red_C2576A"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>